--- a/stalkea_clone/pages/checkout.html
+++ b/stalkea_clone/pages/checkout.html
@@ -55,17 +55,40 @@
                 <h3>Informações de Contacto</h3>
 
                 <div class="form-group">
-                    <label class="form-label" for="fullName">Nome completo</label>
+                    <label class="form-label" for="fullName">
+                        <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                            <circle cx="12" cy="7" r="4"></circle>
+                        </svg>
+                        Nome completo
+                    </label>
                     <input type="text" id="fullName" class="form-input" placeholder="João Silva" required minlength="3">
                 </div>
 
                 <div class="form-group">
-                    <label class="form-label" for="email">Email</label>
+                    <label class="form-label" for="email">
+                        <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z">
+                            </path>
+                            <polyline points="22,6 12,13 2,6"></polyline>
+                        </svg>
+                        Email
+                    </label>
                     <input type="email" id="email" class="form-input" placeholder="joao@exemplo.pt" required>
                 </div>
 
                 <div class="form-group">
-                    <label class="form-label" for="phone">Telemóvel</label>
+                    <label class="form-label" for="phone">
+                        <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path
+                                d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
+                            </path>
+                        </svg>
+                        Telemóvel
+                    </label>
                     <input type="tel" id="phone" class="form-input" placeholder="912 345 678" required maxlength="11">
                 </div>
             </div>
@@ -95,7 +118,14 @@
                 <!-- MBWay -->
                 <div class="payment-content active" id="mbway-content">
                     <div class="form-group">
-                        <label class="form-label" for="mbwayPhone">Número de telemóvel</label>
+                        <label class="form-label" for="mbwayPhone">
+                            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <rect x="5" y="2" width="14" height="20" rx="2" ry="2"></rect>
+                                <line x1="12" y1="18" x2="12.01" y2="18"></line>
+                            </svg>
+                            Número de telemóvel
+                        </label>
                         <input type="tel" id="mbwayPhone" class="form-input" placeholder="912 345 678" maxlength="11">
                     </div>
                     <p class="payment-note">Receberás uma notificação na app MBWay para confirmar. O acesso é liberado
