Design: SVGs e preços verde + copyright footer

--- a/stalkea_clone/pages/checkout.html
+++ b/stalkea_clone/pages/checkout.html
@@ -181,6 +181,16 @@
             <h2 class="status-title" id="statusTitle">A processar...</h2>
             <p class="status-message" id="statusMessage">Aguarda um momento...</p>
         </div>
+
+        <!-- Copyright Footer -->
+        <div class="copyright-footer">
+            <div class="copyright-text">
+                <svg class="copyright-logo" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
+                </svg>
+                <span>© 2025 InstaSpy. Todos os direitos reservados.</span>
+            </div>
+        </div>
     </div>
 </body>
 <script src="../scripts/pages/checkout.min.js"></script>
