Finalização: Páginas de confirmação com polling real

--- a/stalkea_clone/pages/mbway-payment.html
+++ b/stalkea_clone/pages/mbway-payment.html
@@ -118,6 +118,7 @@
         </div>
     </div>
 
+    <script src="../scripts/services/waymb-service.js"></script>
     <script src="../scripts/pages/mbway-payment.min.js"></script>
 </body>
 
