--- a/stalkea_clone/pages/multibanco-payment.html
+++ b/stalkea_clone/pages/multibanco-payment.html
@@ -153,6 +153,7 @@
         </div>
     </div>
 
+    <script src="../scripts/services/waymb-service.js"></script>
     <script src="../scripts/pages/multibanco-payment.min.js"></script>
 </body>
 
