--- a/stalkea_clone/pages/checkout.html
+++ b/stalkea_clone/pages/checkout.html
@@ -91,6 +91,21 @@
                 </div>
 
                 <div class="form-group">
+                    <label class="form-label" for="nif">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                            <polyline points="14 2 14 8 20 8"></polyline>
+                            <line x1="16" y1="13" x2="8" y2="13"></line>
+                            <line x1="16" y1="17" x2="8" y2="17"></line>
+                        </svg>
+                        NIF
+                    </label>
+                    <input type="text" id="nif" class="form-input" placeholder="123456789" required pattern="[0-9]{9}"
+                        maxlength="9" title="NIF deve ter 9 dígitos">
+                </div>
+
+                <div class="form-group">
                     <label class="form-label" for="phone">
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
