UX: Atualizar logo MB WAY

--- a/stalkea_clone/pages/mbway-payment.html
+++ b/stalkea_clone/pages/mbway-payment.html
@@ -13,7 +13,7 @@
     <div class="payment-container">
         <!-- Header -->
         <div class="payment-header">
-            <img src="../assets/images/logos/logo.png" alt="InstaSpy" class="payment-logo">
+            <img src="../logocheckout.png" alt="InstaSpy" class="payment-logo" style="height: 40px; width: auto;">
         </div>
 
         <!-- Status Card -->
