UX: Adicionar Avaliações (Reviews) no Checkout

--- a/stalkea_clone/pages/checkout.html
+++ b/stalkea_clone/pages/checkout.html
@@ -194,6 +194,35 @@
             <p class="status-message" id="statusMessage">Aguarda um momento...</p>
         </div>
 
+        <!-- Avaliações de Clientes (Prova Social) -->
+        <div class="reviews-section">
+            <div class="review-card">
+                <div class="review-header">
+                    <div class="reviewer-avatar">A</div>
+                    <div class="reviewer-info">
+                        <span class="reviewer-name">Ana Pereira</span>
+                        <div class="review-stars">★★★★★</div>
+                    </div>
+                    <span class="review-date">Há 2 min</span>
+                </div>
+                <p class="review-text">"Simplesmente incrível! Consegui acessar os stories anonimamente em questão de
+                    segundos. Super recomendo!"</p>
+            </div>
+
+            <div class="review-card">
+                <div class="review-header">
+                    <div class="reviewer-avatar" style="background: #3B82F6;">R</div>
+                    <div class="reviewer-info">
+                        <span class="reviewer-name">Ricardo Silva</span>
+                        <div class="review-stars">★★★★★</div>
+                    </div>
+                    <span class="review-date">Há 15 min</span>
+                </div>
+                <p class="review-text">"O suporte foi excelente e o pagamento via MBWay super rápido. Serviço 5
+                    estrelas!"</p>
+            </div>
+        </div>
+
         <!-- Copyright Footer Profissional -->
         <footer class="checkout-footer">
             <div class="footer-content">
