UX Fix: Forçar atualização de estilo do botão (Cache Busting)

--- a/stalkea_clone/pages/checkout.html
+++ b/stalkea_clone/pages/checkout.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout Seguro - InstaSpy</title>
     <link rel="shortcut icon" href="../assets/images/favicon/favicon.png">
-    <link rel="stylesheet" href="../styles/pages/checkout.css">
+    <link rel="stylesheet" href="../styles/pages/checkout.css?v=2.2">
 </head>
 
 <body>
@@ -176,7 +176,7 @@
             </div>
 
             <!-- Botão de Finalizar -->
-            <button type="submit" class="btn-primary" id="submitBtn">
+            <button type="submit" class="btn-primary btn-futuristic" id="submitBtn">
                 <span>Finalizar Compra</span>
                 <span class="btn-amount">12,90€</span>
             </button>
