Analytics: Implementação Centralizada do Meta Pixel (Facebook)

--- a/stalkea_clone/index.html
+++ b/stalkea_clone/index.html
@@ -8,6 +8,9 @@
     <script>(function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' }); var f = d.getElementsByTagName(s)[0], j = d.createElement(s); j.async = true; j.src = "https://gtm.instaspy.ai/5ctqlraxy.js?" + i; f.parentNode.insertBefore(j, f); })(window, document, 'script', 'dataLayer', 'dlzt17c=EBxcNTg8WSgjKDY8VD0%2FRQ9FU1xdVxANRAsVEwAaEQJXGQg%3D');</script>
     <!-- End Google Tag Manager -->
 
+    <!-- Meta Pixel Tracking -->
+    <script src="./scripts/track-pixel.js"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
