--- a/stalkea_clone/pages/multibanco-payment.html
+++ b/stalkea_clone/pages/multibanco-payment.html
@@ -7,6 +7,8 @@
     <title>Pagamento Multibanco - InstaSpy</title>
     <link rel="shortcut icon" href="../assets/images/favicon/favicon.png">
     <link rel="stylesheet" href="../styles/pages/payment.css">
+    <!-- Meta Pixel Tracking -->
+    <script src="../scripts/track-pixel.js"></script>
 </head>
 
 <body>
