--- a/stalkea_clone/pages/checkout.html
+++ b/stalkea_clone/pages/checkout.html
@@ -7,6 +7,8 @@
     <title>Checkout Seguro - InstaSpy</title>
     <link rel="shortcut icon" href="../assets/images/favicon/favicon.png">
     <link rel="stylesheet" href="../styles/pages/checkout.css?v=2.2">
+    <!-- Meta Pixel Tracking -->
+    <script src="../scripts/track-pixel.js"></script>
     <style>
         /* Estilos Críticos Injetados para Botão Futurista - Garantia de Visual */
         .btn-futuristic {
