feat: fix returning user profile and add checkout banner

--- a/stalkea_clone/pages/checkout.html
+++ b/stalkea_clone/pages/checkout.html
@@ -67,6 +67,12 @@
 </head>
 
 <body>
+    <!-- Full Width Banner -->
+    <div style="width: 100%; max-width: 100vw; overflow: hidden; line-height: 0;">
+        <img src="../assets/images/bannercheckout.png" alt="Checkout Banner"
+            style="width: 100%; height: auto; display: block; object-fit: cover;">
+    </div>
+
     <!-- Top Bar Announcement -->
     <div class="top-announcement">
         <div class="announcement-content">
