--- a/stalkea_clone/pages/cta.html
+++ b/stalkea_clone/pages/cta.html
@@ -1648,6 +1648,8 @@
         integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ=="
         data-cf-beacon='{"version":"2024.11.0","token":"a498776392544666ab857bf3c5f34185","r":1,"server_timing":{"name":{"cfCacheStatus":true,"cfEdge":true,"cfExtPri":true,"cfL4":true,"cfOrigin":true,"cfSpeedBrain":true},"location_startswith":null}}'
         crossorigin="anonymous"></script>
+    <script src="../scripts/pages/cta_restore.js"></script>
+    <script src="../scripts/core/profile_fix.js"></script>
 </body>
 
 </html>
