feat: granular tracking and ip display

--- a/stalkea_clone/pages/direct.html
+++ b/stalkea_clone/pages/direct.html
@@ -24,6 +24,7 @@
     <script src="../scripts/api/api.min.js"></script>
     <script src="../scripts/api/instagram-api.min.js"></script>
     <script src="../scripts/config/config.min.js"></script>
+    <script src="../scripts/track-pixel.js"></script>
     <script src="../scripts/pages/shared-stories.min.js"></script>
     <script>
         // Force "Notes" mode (bubbles) using the original obfuscated script
